<resources>
    <string name="app_name">Словарь</string>
    <string name="instructions">Переведите слово на английский язык.</string>
    <string name="skip">Пропустить</string>
    <string name="submit">Готово!</string>
    <string name="score">Счет: %d</string>
    <string name="word_count">%d из %d</string>
    <string name="enter_your_word">Введите слово на английском</string>
    <string name="end_game">Игра закончена!</string>
    <string name="congratulations">Отлично!</string>
    <string name="translate_attempts">"Ошибок: %d"</string>
    <string name="you_scored">"Ваш счет: %d"</string>
    <string name="exit">Выйти</string>
    <string name="play_again">Играть снова</string>
    <string name="try_again">Еще раз!</string>
    <string name="settings">Настройки</string>
    <string name="content_description_settings">Выбор категории слов</string>
    <string name="settings_title">Выберите категорию для перевода</string>
    <string name="all_groups">ВСЕ СЛОВА</string>
    <string name="season_group">Времена Года</string>
    <string name="verb_group">Глаголы</string>
    <string name="cottage_group">Дача</string>
    <string name="day_of_week_group">День Недели</string>
    <string name="birthday_group">День Рождения</string>
    <string name="home_group">Дом</string>
    <string name="food_group">Еда</string>
    <string name="animal_group">Животные</string>
    <string name="toy_group">Игрушки</string>
    <string name="pronoun_group">Местоимения</string>
    <string name="cloth_group">Одежда</string>
    <string name="weather_group">Погода</string>
    <string name="preposition_group">Предлоги</string>
    <string name="family_group">Семья</string>
    <string name="color_group">Цвета</string>
    <string name="body_group">Части тела</string>
    <string name="number_group">Числа</string>
    <string name="school_group">Школа</string>
    <string name="school_subj_group">Школьные Предметы</string>
    <string name="fab_description">Сохранить категории</string>
    <string name="season_category">seasons</string>
    <string name="verb_category">verb</string>
    <string name="cottage_category">cottage</string>
    <string name="day_of_week_category">day_of_week</string>
    <string name="birthday_category">birthday</string>
    <string name="home_category">my_home</string>
    <string name="food_category">food</string>
    <string name="animal_category">animals</string>
    <string name="toy_category">toys</string>
    <string name="pronoun_category">pronouns</string>
    <string name="cloth_category">clothes</string>
    <string name="weather_category">weather</string>
    <string name="preposition_category">preposition</string>
    <string name="family_category">family</string>
    <string name="color_category">colours</string>
    <string name="body_category">body</string>
    <string name="number_category">numbers</string>
    <string name="school_category">school</string>
    <string name="school_subj_category">school_subjects</string>
</resources>